src/snapshots/rublocks__codegen__tests__snapshot_tests__emit_route_page_get.snap
---
source: src/codegen.rs
expression: main_rs
---
// Generated by rublocks. Do not edit by hand.

use axum::{
    routing::get,
    Router,
};
pub mod _rb_encoding {
    use axum::extract::Request;
    use axum::http::{HeaderValue, StatusCode, header::CONTENT_TYPE};
    use axum::middleware::Next;
    use axum::response::{IntoResponse, Response};
    /// Project-wide character encoding declared in `main.json` and
    /// woven into every HTTP boundary by the layer below.
    pub const CHARSET: &str = "utf-8";
    /// Middleware function applied as the outermost router layer.
    /// Runs before any handler on the request side and after every
    /// handler on the response side.
    pub async fn enforce(req: Request, next: Next) -> Response {
        if let Some(value) = req.headers().get(CONTENT_TYPE) {
            if let Ok(s) = value.to_str() {
                if mime_carries_text(s) {
                    if let Some(cs) = extract_charset(s) {
                        if !cs.eq_ignore_ascii_case(CHARSET) {
                            return (
                                StatusCode::UNSUPPORTED_MEDIA_TYPE,
                                format!(
                                    "rublocks: only charset={} is accepted (got `{}`)", CHARSET,
                                    cs,
                                ),
                            )
                                .into_response();
                        }
                    }
                }
            }
        }
        let mut res = next.run(req).await;
        let needs_label = res
            .headers()
            .get(CONTENT_TYPE)
            .and_then(|v| v.to_str().ok())
            .map(|s| mime_should_be_labelled(s) && extract_charset(s).is_none())
            .unwrap_or(false);
        if needs_label {
            let current = res
                .headers()
                .get(CONTENT_TYPE)
                .and_then(|v| v.to_str().ok())
                .map(str::to_owned);
            if let Some(current) = current {
                let labelled = format!("{current}; {}", "charset=utf-8");
                if let Ok(hv) = HeaderValue::from_str(&labelled) {
                    res.headers_mut().insert(CONTENT_TYPE, hv);
                }
            }
        }
        res
    }
    /// MIME types where a charset parameter is meaningful — i.e. the
    /// body is interpreted as text. Binary types (`image/*`,
    /// `application/octet-stream`, …) are left untouched.
    fn mime_carries_text(content_type: &str) -> bool {
        let mime = mime_of(content_type);
        mime.eq_ignore_ascii_case("application/json")
            || mime.eq_ignore_ascii_case("application/x-www-form-urlencoded")
            || mime.to_ascii_lowercase().starts_with("text/")
    }
    /// Same predicate restricted to response bodies. Form-encoded
    /// payloads are not a server response shape, so we exclude them
    /// from the labelling pass.
    fn mime_should_be_labelled(content_type: &str) -> bool {
        let mime = mime_of(content_type);
        mime.eq_ignore_ascii_case("application/json")
            || mime.to_ascii_lowercase().starts_with("text/")
    }
    fn mime_of(content_type: &str) -> &str {
        content_type.split(';').next().unwrap_or(content_type).trim()
    }
    /// Extract the `charset=` parameter from a Content-Type, if any.
    /// Case-insensitive on the parameter name; the value is returned
    /// as-is (callers compare with `eq_ignore_ascii_case`).
    fn extract_charset(content_type: &str) -> Option<&str> {
        for part in content_type.split(';').skip(1) {
            let part = part.trim();
            if part.len() < "charset=".len() {
                continue;
            }
            let (head, tail) = part.split_at("charset=".len());
            if head.eq_ignore_ascii_case("charset=") {
                let value = tail.trim().trim_matches('"');
                return Some(value);
            }
        }
        None
    }
}
/// Structured-logging support. Generated by rublocks; do not edit.
pub mod _rb_log {
    /// Walk an error's `source()` chain into a Vec<String> so the
    /// block-failure event ships the full cause stack (matches the
    /// `error.chain` field documented in `docs/logging.md`).
    pub fn error_chain(
        err: &(dyn ::std::error::Error + 'static),
    ) -> ::std::vec::Vec<::std::string::String> {
        let mut chain: ::std::vec::Vec<::std::string::String> = ::std::vec::Vec::new();
        chain.push(::std::format!("{err}"));
        let mut cur: ::std::option::Option<&(dyn ::std::error::Error + 'static)> = err
            .source();
        while let ::std::option::Option::Some(next) = cur {
            chain.push(::std::format!("{next}"));
            cur = next.source();
        }
        chain
    }
    /// Best-effort backtrace capture. Returns `None` unless the
    /// process was started with `RUST_BACKTRACE=1` (or `=full`),
    /// matching std's own gating policy. Stringified through
    /// `Display` so it lands in the JSON line as a single string.
    pub fn error_backtrace() -> ::std::option::Option<::std::string::String> {
        let bt = ::std::backtrace::Backtrace::capture();
        match bt.status() {
            ::std::backtrace::BacktraceStatus::Captured => {
                ::std::option::Option::Some(::std::format!("{bt}"))
            }
            _ => ::std::option::Option::None,
        }
    }
    /// Lightweight per-request id used when the inbound request does
    /// not carry an `x-request-id` header. Folds a monotonic counter
    /// into the wall-clock nanoseconds-since-epoch so two concurrent
    /// requests on the same tick still get distinct ids.
    ///
    /// Not cryptographically strong on purpose: the id is for
    /// correlation across log lines, not for security. A pre-existing
    /// `x-request-id` (from a reverse proxy / load balancer) wins.
    pub fn rand_request_id() -> u128 {
        use ::std::sync::atomic::{AtomicU64, Ordering};
        static COUNTER: AtomicU64 = AtomicU64::new(0);
        let seq = COUNTER.fetch_add(1, Ordering::Relaxed) as u128;
        let now = ::std::time::SystemTime::now()
            .duration_since(::std::time::UNIX_EPOCH)
            .map(|d| d.as_nanos())
            .unwrap_or(0);
        (now << 32) ^ seq
    }
}
pub mod _rb_runtime {
    use axum::response::IntoResponse as _;
    /// JSON `403 Forbidden` for `kind: api` routes. Body is a
    /// fixed `{"error":{"code":"forbidden"}}` to keep the dist
    /// dependency surface minimal.
    pub fn api_403() -> axum::response::Response {
        (
            axum::http::StatusCode::FORBIDDEN,
            [(axum::http::header::CONTENT_TYPE, "application/json")],
            r#"{"error":{"code":"forbidden"}}"#,
        )
            .into_response()
    }
    /// Plain-text `403 Forbidden` for `kind: page` routes.
    pub fn page_403() -> axum::response::Response {
        (axum::http::StatusCode::FORBIDDEN, "403 Forbidden").into_response()
    }
    /// Structured JSON error for `kind: api` routes. Drives the
    /// `error` block's response shape.
    pub fn api_error(
        status: u16,
        code: String,
        description: Option<String>,
    ) -> axum::response::Response {
        let status = axum::http::StatusCode::from_u16(status)
            .unwrap_or(axum::http::StatusCode::INTERNAL_SERVER_ERROR);
        let mut body = serde_json::Map::new();
        let mut err = serde_json::Map::new();
        err.insert("code".to_string(), serde_json::Value::String(code));
        if let Some(d) = description {
            err.insert("description".to_string(), serde_json::Value::String(d));
        }
        body.insert("error".to_string(), serde_json::Value::Object(err));
        (status, axum::Json(serde_json::Value::Object(body))).into_response()
    }
    /// Plain-text error response for `kind: page` routes.
    pub fn page_error(status: u16, body: String) -> axum::response::Response {
        let status = axum::http::StatusCode::from_u16(status)
            .unwrap_or(axum::http::StatusCode::INTERNAL_SERVER_ERROR);
        (status, body).into_response()
    }
    /// Map a sqlx error to a `500 Internal Server Error`. The
    /// generated handler surfaces the message in plain text so
    /// dev-mode users see the cause without digging into logs.
    pub fn db_error(e: sqlx::Error) -> axum::response::Response {
        (
            axum::http::StatusCode::INTERNAL_SERVER_ERROR,
            format!("rublocks: db error: {e}"),
        )
            .into_response()
    }
    /// `422 Unprocessable Content` for a CEL `validate` predicate
    /// that returned `false` at request time. Used by both input
    /// validation and `db.insert` field-level validators.
    pub fn field_validation_error(
        field: String,
        expr: String,
    ) -> axum::response::Response {
        let mut err = serde_json::Map::new();
        err.insert("field".to_string(), serde_json::Value::String(field));
        err.insert(
            "code".to_string(),
            serde_json::Value::String("validate".to_string()),
        );
        err.insert(
            "message".to_string(),
            serde_json::Value::String(format!("must satisfy `{expr}`")),
        );
        let mut body = serde_json::Map::new();
        body.insert(
            "errors".to_string(),
            serde_json::Value::Array(vec![serde_json::Value::Object(err)]),
        );
        (
            axum::http::StatusCode::UNPROCESSABLE_ENTITY,
            axum::Json(serde_json::Value::Object(body)),
        )
            .into_response()
    }
    /// Emit a redirect response with the given HTTP status and
    /// Location header. `kind: page` POST handlers terminate with
    /// this after their `process` succeeds.
    pub fn redirect(status: u16, location: String) -> axum::response::Response {
        let status = axum::http::StatusCode::from_u16(status)
            .unwrap_or(axum::http::StatusCode::SEE_OTHER);
        (status, [(axum::http::header::LOCATION, location)]).into_response()
    }
}
#[derive(Clone)]
pub struct AppState {}
#[tokio::main]
async fn main() -> anyhow::Result<()> {
    let __rb_dotenv_loaded: Option<std::path::PathBuf> = ::dotenvy::dotenv().ok();
    let __rb_log_subscriber = ::tracing_subscriber::fmt()
        .json()
        .flatten_event(true)
        .with_current_span(true)
        .with_span_list(true)
        .with_target(true)
        .with_max_level(::tracing::Level::INFO)
        .finish();
    let _ = ::tracing::subscriber::set_global_default(__rb_log_subscriber);
    if let Some(path) = __rb_dotenv_loaded.as_ref() {
        ::tracing::info!(
            target : "rublocks::app", path = % path.display(), "rublocks: loaded .env"
        );
    }
    let state = AppState {};
    let mut router = Router::new().route("/health", get(health));
    router = router.route("/", get(route_home));
    if std::env::var("RUBLOCKS_DEV").is_ok() {
        router = router
            .route("/__rublocks/livereload.js", get(dev_snippet))
            .route("/__rublocks/events", get(dev_events));
        eprintln!("rublocks: dev endpoints enabled at /__rublocks/*");
    }
    router = router
        .layer(
            tower_http::trace::TraceLayer::new_for_http()
                .make_span_with(|request: &axum::http::Request<_>| {
                    let request_id: ::std::string::String = request
                        .headers()
                        .get("x-request-id")
                        .and_then(|v| v.to_str().ok())
                        .map(::std::string::String::from)
                        .unwrap_or_else(|| {
                            ::std::format!("{:032x}", crate ::_rb_log::rand_request_id())
                        });
                    let method = ::std::format!("{}", request.method());
                    let path = request.uri().path().to_string();
                    let route = request
                        .extensions()
                        .get::<axum::extract::MatchedPath>()
                        .map(|m| m.as_str().to_string())
                        .unwrap_or_else(|| path.clone());
                    ::tracing::info_span!(
                        target : "rublocks::request", "http_request", request_id = %
                        request_id, method = % method, path = % path, route = % route,
                    )
                }),
        );
    router = router
        .layer(
            tower_http::set_header::SetResponseHeaderLayer::if_not_present(
                http::header::HeaderName::from_static("x-app-version"),
                http::HeaderValue::from_static("0.0.0"),
            ),
        );
    router = router.layer(axum::middleware::from_fn(_rb_encoding::enforce));
    let app = router.with_state(state);
    let listener = tokio::net::TcpListener::bind("0.0.0.0:3000").await?;
    println!("rublocks app listening on http://0.0.0.0:3000");
    axum::serve(listener, app).await?;
    Ok(())
}
async fn health() -> &'static str {
    "ok"
}
pub mod ctx_home {
    #[derive(askama::Template)]
    #[template(path = "home.html")]
    pub struct PageContext {}
}
async fn route_home() -> axum::response::Response {
    let __rb_input_errors: Vec<crate::_rb_input::FieldError> = Vec::new();
    use askama::Template as _;
    let ctx = ctx_home::PageContext {};
    let rendered = ctx
        .render()
        .unwrap_or_else(|e| format!("rublocks: template render error: {e}"));
    axum::response::IntoResponse::into_response((
        [(axum::http::header::CONTENT_LANGUAGE, "en-US")],
        axum::response::Html(maybe_inject_dev_snippet(rendered)),
    ))
}
/// Inject the livereload snippet into a rendered page when
/// `RUBLOCKS_DEV=1` — so editing a template auto-reloads the
/// browser. The non-dev path is a single env-var lookup.
fn maybe_inject_dev_snippet(html: String) -> String {
    if std::env::var("RUBLOCKS_DEV").is_err() {
        return html;
    }
    const SNIPPET: &str = "<script src=\"/__rublocks/livereload.js\"></script>";
    match html.rfind("</body>") {
        Some(idx) => format!("{}{}{}", & html[..idx], SNIPPET, & html[idx..]),
        None => format!("{html}{SNIPPET}"),
    }
}
async fn dev_snippet() -> impl axum::response::IntoResponse {
    ([(axum::http::header::CONTENT_TYPE, "application/javascript")], LIVERELOAD_JS)
}
async fn dev_events() -> axum::response::Sse<
    impl futures_util::Stream<
        Item = Result<axum::response::sse::Event, std::convert::Infallible>,
    >,
> {
    use futures_util::stream::StreamExt;
    let initial = futures_util::stream::once(async {
        Ok::<
            axum::response::sse::Event,
            std::convert::Infallible,
        >(axum::response::sse::Event::default().comment("rublocks dev ready"))
    });
    let pending = futures_util::stream::pending::<
        Result<axum::response::sse::Event, std::convert::Infallible>,
    >();
    axum::response::Sse::new(initial.chain(pending))
        .keep_alive(axum::response::sse::KeepAlive::default())
}
const LIVERELOAD_JS: &str = "(function () {\n  let everConnected = false;\n  function connect() {\n    const es = new EventSource('/__rublocks/events');\n    es.onopen = function () {\n      if (everConnected) {\n        location.reload();\n      }\n      everConnected = true;\n    };\n    es.onerror = function () {\n      es.close();\n      setTimeout(connect, 500);\n    };\n  }\n  connect();\n})();\n";
